<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_item_search"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_login"
        android:title="@string/sign_in"
        android:icon="@drawable/ic_login_square_arrow_button_outline"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/item_logout"
        android:title="@string/sing_out"
        android:icon="@drawable/ic_sign_out"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/item_refresh"
        android:title="refresh"
        />

</menu>