
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/background_color"
    tools:context="com.example.muffin.youtubeapp.fragments.VideoListFragment">

    <LinearLayout
        android:id="@+id/lytRetry"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">
        <TextView
            android:id="@+id/lblAlert"
            android:text="@string/no_internet_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title"
            android:textColor="@color/primary_text"/>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/raisedRetry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/retry"
            android:theme="@style/RaisedButtonStyle"/>
    </LinearLayout>



            <android.support.v7.widget.RecyclerView
                android:id="@+id/play_list_recyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <com.lsjwzh.widget.materialloadingprogressbar.CircleProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/circular_progress_bar_width"
                android:layout_height="@dimen/circular_progress_bar_height"
                android:layout_marginTop="@dimen/circle_progressBar_marginTop"
                android:layout_gravity="center"
                android:visibility="gone"
                app:mlpb_enable_circle_background="true" />

            <TextView
                android:id="@+id/txt_load_more"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_horizontal"
                android:background="@color/material_background_color"
                android:text="@string/load_more_btn_text"
                android:textAlignment="center"
                android:textColor="@color/text_and_icon_color"
                android:visibility="gone" />

</LinearLayout>
</ScrollView>